--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_extension.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_extension.yml
@@ -1,94 +1,135 @@
 services:
   _defaults:
-    public: true
+    public: false
+    autowire: true
+    autoconfigure: true
 
-  form.extension.comma_transformer:
-    class: 'PrestaShopBundle\Form\Admin\Extension\CommaTransformerExtension'
-    tags:
-      - { name: form.type_extension }
+  PrestaShopBundle\Form\Admin\Extension\CommaTransformerExtension:
+  PrestaShopBundle\Form\Admin\Type\ResizableTextType:
 
-  form.type.extension.money:
-    class: 'PrestaShopBundle\Form\Admin\Type\CustomMoneyType'
+  PrestaShopBundle\Form\Admin\Type\CustomMoneyType:
     arguments:
       - '@prestashop.core.localization.locale.context_locale'
       - '@=service("prestashop.adapter.legacy.configuration").get("PS_CURRENCY_DEFAULT")'
       - '@PrestaShop\PrestaShop\Adapter\Currency\Repository\CurrencyRepository'
-    tags:
-      - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\MoneyType }
 
-  form.type.extension.resizable_text:
-    class: 'PrestaShopBundle\Form\Admin\Type\ResizableTextType'
-    tags:
-      - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\TextType }
 
-  form.extension.help_text:
-    class: 'PrestaShopBundle\Form\Admin\Extension\HelpTextExtension'
-    tags:
-      - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\FormType }
+  # These two are the same one is adding help config and the other one is adding hint
+  PrestaShopBundle\Form\Admin\Extension\HelpTextExtension:
+  PrestaShopBundle\Form\Admin\Extension\HintTextExtension:
 
-  form.extension.hint_text:
-    class: 'PrestaShopBundle\Form\Admin\Extension\HintTextExtension'
-    tags:
-      - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\FormType }
+  PrestaShopBundle\Form\Admin\Extension\DefaultEmptyDataExtension:
+  PrestaShopBundle\Form\Extension\DataListExtension:
+  PrestaShopBundle\Form\Admin\Extension\RowAttributesExtension:
+  PrestaShopBundle\Form\Admin\Extension\ExternalLinkExtension:
+  PrestaShopBundle\Form\Admin\Extension\AlertExtension:
+  PrestaShopBundle\Form\Admin\Extension\LabelOptionsExtension:
+  PrestaShopBundle\Form\Admin\Extension\UnitTypeExtension:
+  PrestaShopBundle\Form\Admin\Extension\MultistoreExtension:
+  PrestaShopBundle\Form\Admin\Extension\ColumnsNumberExtension:
 
-  form.extension.default_empty_data:
-    class: 'PrestaShopBundle\Form\Admin\Extension\DefaultEmptyDataExtension'
-    tags:
-      - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\FormType }
-
-  form.extension.data_list:
-    class: 'PrestaShopBundle\Form\Extension\DataListExtension'
-    tags:
-      - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\TextType }
-
-  form.extension.row_attributes:
-    class: 'PrestaShopBundle\Form\Admin\Extension\RowAttributesExtension'
-    tags:
-      - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\FormType }
-
-  form.extension.external_link:
-    class: 'PrestaShopBundle\Form\Admin\Extension\ExternalLinkExtension'
-    tags:
-      - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\FormType }
-
-  form.extension.alert:
-    class: 'PrestaShopBundle\Form\Admin\Extension\AlertExtension'
-    tags:
-      - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\FormType }
-
-  form.extension.label_options:
-    class: 'PrestaShopBundle\Form\Admin\Extension\LabelOptionsExtension'
-    tags:
-      - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\FormType }
-
-  form.extension.form_theme:
-    class: 'PrestaShopBundle\Form\Admin\Extension\FormThemeExtension'
+  PrestaShopBundle\Form\Admin\Extension\FormThemeExtension:
     arguments:
       - '@twig.form.renderer'
-    tags:
-      - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\FormType }
 
-  form.extension.columns_number:
-    class: 'PrestaShopBundle\Form\Admin\Extension\ColumnsNumberExtension'
-    tags:
-      - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\FormType }
-
-  form.extension.multistore_configuration:
-    class: 'PrestaShopBundle\Form\Admin\Extension\MultistoreConfigurationTypeExtension'
+  PrestaShopBundle\Form\Admin\Extension\MultistoreConfigurationTypeExtension:
     arguments:
       - '@prestashop.multistore_checkbox_enabler'
-    tags:
-      - { name: form.type_extension, extended_type: PrestaShopBundle\Form\Admin\Type\MultistoreConfigurationType }
 
+  PrestaShopBundle\Form\Admin\Extension\DownloadFileExtension:
+  PrestaShopBundle\Form\Admin\Extension\AlertsTrackingExtension:
+    arguments:
+      - '@session.flash_bag'
+  PrestaShopBundle\Form\Admin\Extension\ModifyAllShopsExtension:
+    arguments:
+      - '@prestashop.adapter.feature.multistore'
+      - '@prestashop.adapter.shop.context'
+      - '@translator'
+
+  PrestaShopBundle\Form\Admin\Extension\DisablingSwitchExtension:
+    arguments:
+      - '@form.event_listener.add_disabling_switch_listener'
+
+  form.extension.comma_transformer:
+    alias: 'PrestaShopBundle\Form\Admin\Extension\CommaTransformerExtension'
+    deprecated: ~
+    public: true
+  form.type.extension.money:
+    alias: 'PrestaShopBundle\Form\Admin\Type\CustomMoneyType'
+    deprecated: ~
+    public: true
+  form.type.extension.resizable_text:
+    alias: 'PrestaShopBundle\Form\Admin\Type\ResizableTextType'
+    deprecated: ~
+    public: true
+  form.extension.help_text:
+    alias: 'PrestaShopBundle\Form\Admin\Extension\HelpTextExtension'
+    deprecated: ~
+    public: true
+  form.extension.hint_text:
+    alias: 'PrestaShopBundle\Form\Admin\Extension\HintTextExtension'
+    deprecated: ~
+    public: true
+  form.extension.default_empty_data:
+    alias: 'PrestaShopBundle\Form\Admin\Extension\DefaultEmptyDataExtension'
+    deprecated: ~
+    public: true
+  form.extension.data_list:
+    alias: 'PrestaShopBundle\Form\Extension\DataListExtension'
+    deprecated: ~
+    public: true
+  form.extension.row_attributes:
+    alias: 'PrestaShopBundle\Form\Admin\Extension\RowAttributesExtension'
+    deprecated: ~
+    public: true
+  form.extension.external_link:
+    alias: 'PrestaShopBundle\Form\Admin\Extension\ExternalLinkExtension'
+    deprecated: ~
+    public: true
+  form.extension.alert:
+    alias: 'PrestaShopBundle\Form\Admin\Extension\AlertExtension'
+    deprecated: ~
+    public: true
+  form.extension.label_options:
+    alias: 'PrestaShopBundle\Form\Admin\Extension\LabelOptionsExtension'
+    deprecated: ~
+    public: true
+  form.extension.form_theme:
+    alias: 'PrestaShopBundle\Form\Admin\Extension\FormThemeExtension'
+    deprecated: ~
+    public: true
+  form.extension.columns_number:
+    alias: 'PrestaShopBundle\Form\Admin\Extension\ColumnsNumberExtension'
+    deprecated: ~
+    public: true
+  form.extension.multistore_configuration:
+    alias: 'PrestaShopBundle\Form\Admin\Extension\MultistoreConfigurationTypeExtension'
+    deprecated: ~
+    public: true
   form.extension.unit:
-    class: 'PrestaShopBundle\Form\Admin\Extension\UnitTypeExtension'
-    tags:
-      - { name: form.type_extension }
-
+    alias: 'PrestaShopBundle\Form\Admin\Extension\UnitTypeExtension'
+    deprecated: ~
+    public: true
   form.extension.multistore_dropdown:
-    class: 'PrestaShopBundle\Form\Admin\Extension\MultistoreExtension'
-    tags:
-      - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\FormType }
+    alias: 'PrestaShopBundle\Form\Admin\Extension\MultistoreExtension'
+    deprecated: ~
+    public: true
+  form.extension.downloadable_file:
+    alias: 'PrestaShopBundle\Form\Admin\Extension\DownloadFileExtension'
+    deprecated: ~
+    public: true
+  form.extension.alerts_tracking_extension:
+    alias: 'PrestaShopBundle\Form\Admin\Extension\AlertsTrackingExtension'
+    deprecated: ~
+    public: true
+  form.extension.modify_all_shops_extension:
+    alias: 'PrestaShopBundle\Form\Admin\Extension\ModifyAllShopsExtension'
+    deprecated: ~
+    public: true
+  form.extension.disabling_switch_extension:
+    alias: 'PrestaShopBundle\Form\Admin\Extension\DisablingSwitchExtension'
+    deprecated: ~
+    public: true
 
   prestashop.multistore_checkbox_enabler:
     class: PrestaShopBundle\Service\Form\MultistoreCheckboxEnabler
@@ -98,31 +139,3 @@ services:
       - '@prestashop.adapter.shop.context'
       - '@prestashop.core.admin.multistore'
       - '@PrestaShopBundle\Form\FormCloner'
-
-  form.extension.downloadable_file:
-    class: 'PrestaShopBundle\Form\Admin\Extension\DownloadFileExtension'
-    tags:
-      - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\FileType }
-
-  form.extension.alerts_tracking_extension:
-    class: 'PrestaShopBundle\Form\Admin\Extension\AlertsTrackingExtension'
-    arguments:
-      - '@session.flash_bag'
-    tags:
-      - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\FormType }
-
-  form.extension.modify_all_shops_extension:
-    class: 'PrestaShopBundle\Form\Admin\Extension\ModifyAllShopsExtension'
-    arguments:
-      - '@prestashop.adapter.feature.multistore'
-      - '@prestashop.adapter.shop.context'
-      - '@translator'
-    tags:
-      - { name: form.type_extension }
-
-  form.extension.disabling_switch_extension:
-    class: 'PrestaShopBundle\Form\Admin\Extension\DisablingSwitchExtension'
-    arguments:
-      - '@PrestaShopBundle\Form\Admin\Type\EventListener\AddDisablingSwitchListener'
-    tags:
-      - { name: form.type_extension }
