--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -90,7 +90,7 @@ parameters:
         -
             class: PrestaShopBundle\Security\Voter\PageVoter
             constant: ['CREATE', 'READ', 'UPDATE', 'DELETE', 'LEVEL_DELETE', 'LEVEL_CREATE', 'LEVEL_READ', 'LEVEL_UPDATE']
-            message: 'Use \PrestaShop\PrestaShop\Core\Security\AccessCheckerInterface constants instead.'
+            message: 'Use \PrestaShop\PrestaShop\Core\Security\Permission constants instead.'
             disallowIn:
                 - src/*
 
