Update constants usages

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -93,4 +93,10 @@ parameters:
             message: 'Use \PrestaShop\PrestaShop\Core\Security\Permission constants instead.'
             disallowIn:
                 - src/*
+        -
+            class: AdminController
+            constant: ['LEVEL_DELETE', 'LEVEL_ADD', 'LEVEL_VIEW', 'LEVEL_EDIT']
+            message: 'Use \PrestaShop\PrestaShop\Core\Security\Permission constants instead.'
+            disallowIn:
+                - src/*
 
