--- a/composer.json
+++ b/composer.json
@@ -139,7 +139,7 @@
         "symfony/property-access": "^4",
         "symfony/psr-http-message-bridge": "^2.1",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/symfony": "^4.4.49",
+        "symfony/symfony": "4.4.*",
         "tecnickcom/tcpdf": "^6.2.12",
         "tijsverkoyen/css-to-inline-styles": "^2.2",
         "twig/twig": "^3.0"
