--- a/src/PrestaShopBundle/Resources/config/services/core/form/data_formatter.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/data_formatter.yml
@@ -1,6 +1,7 @@
 services:
   _defaults:
     autowire: true
+    public: false
     bind:
       $modifyAllNamePrefix: !php/const PrestaShopBundle\Form\Extension\ModifyAllShopsExtension::MODIFY_ALL_SHOPS_PREFIX
 
