--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/customer_service/customer_threads.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/customer_service/customer_threads.yml
@@ -17,6 +17,7 @@ admin_customer_threads_filter:
     gridDefinitionFactoryServiceId: prestashop.core.grid.definition.factory.customer_thread
     redirectRoute: admin_customer_threads
     _legacy_controller: AdminCustomerThreads
+    _legacy_feature_flag: customer_threads
 
 admin_customer_threads_view:
   path: /{customerThreadId}/view
@@ -27,6 +28,7 @@ admin_customer_threads_view:
     _legacy_parameters:
       id_customer_thread: customerThreadId
     _legacy_link: AdminCustomerThreads:viewcustomer_thread
+    _legacy_feature_flag: customer_threads
   requirements:
     customerThreadId: \d+
   options:
@@ -96,17 +98,11 @@ admin_customer_threads_bulk_delete:
     _legacy_link: AdminCustomerThreads
     _legacy_feature_flag: customer_threads
 
-admin_customer_threads_contact_options_update:
-  path: /contact_options
-  methods: [ POST ]
-  defaults:
-    _controller: PrestaShopBundle\Controller\Admin\Sell\CustomerService\CustomerThreadController::contactOptionsUpdate
-    _legacy_controller: AdminCustomerThreads
-    #  _legacy_link: AdminCustomerThreads
-
 admin_customer_threads_settings_update:
   path: /settings
   methods: [ POST ]
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Sell\CustomerService\CustomerThreadController::processAction
     _legacy_controller: AdminCustomerThreads
+    _legacy_link: AdminCustomerThreads
+    _legacy_feature_flag: customer_threads
