--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_validator.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_validator.yml
@@ -1,11 +1,5 @@
 services:
-  _defaults:
-    public: true
-
   validator.unique.tinymce_max_length_validator:
-    class: PrestaShopBundle\Form\Validator\Constraints\TinyMceMaxLengthValidator
-    arguments:
-      - "@prestashop.adapter.validate"
-      - "@translator"
-    tags:
-      - { name: validator.constraint_validator, alias: tinymce_max_length_validator }
+    alias: PrestaShopBundle\Form\Validator\Constraints\TinyMceMaxLengthValidator
+    deprecated: ~
+    public: true
