Fix di & add deprecation message

--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_data_transformer.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_data_transformer.yml
@@ -1,3 +1,4 @@
+# This file will be removed in next version, do not add any service here
 services:
   prestashop.bundle.form.data_transformer.string_array_to_integer_array:
     alias: 'PrestaShopBundle\Form\DataTransformer\StringArrayToIntegerArrayDataTransformer'
