--- a/src/PrestaShopBundle/Resources/config/services/bundle/form.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form.yml
@@ -12,11 +12,12 @@ services:
       $defaultLanguageId: '@=service("prestashop.adapter.legacy.configuration").get("PS_LANG_DEFAULT")'
       $formRenderer: '@twig.form.renderer'
       $flashBag: '@session.flash_bag'
-      $addDisablingSwitchListener: '@form.event_listener.add_disabling_switch_listener'
       $locale: '@prestashop.core.localization.locale.context_locale'
       $multistoreController: '@prestashop.core.admin.multistore'
       $validate: "@prestashop.adapter.validate"
       $multiStoreContext: '@prestashop.adapter.shop.context'
+      $themeRepository: '@prestashop.core.addon.theme.repository'
+      $shopThemeName: '@=service("prestashop.adapter.legacy.context").getContext().shop.theme.getName()'
 
   PrestaShopBundle\Form\:
     resource: "../../../../Form/{Extension,Validator,DataTransformer}/*"
@@ -24,9 +25,4 @@ services:
   PrestaShopBundle\Form\FormCloner:
   PrestaShopBundle\Form\FormBuilderModifier:
   PrestaShopBundle\Service\Form\MultistoreCheckboxEnabler:
-
   PrestaShopBundle\Form\Admin\Improve\Design\Theme\PageLayoutCustomizationFormFactory:
-    arguments:
-      - '@form.factory'
-      - '@prestashop.core.addon.theme.repository'
-      - '@=service("prestashop.adapter.legacy.context").getContext().shop.theme.getName()'
