--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form.yml
@@ -1,3 +1,4 @@
+# This file will be removed in next version, do not add any service here
 services:
   form.form_cloner:
     alias: PrestaShopBundle\Form\FormCloner
