--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_extension.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_extension.yml
@@ -1,3 +1,4 @@
+# This file will be removed in next version, do not add any service here
 services:
   form.extension.comma_transformer:
     alias: 'PrestaShopBundle\Form\Extension\CommaTransformerExtension'
@@ -79,12 +80,3 @@ services:
     alias: 'PrestaShopBundle\Form\Extension\DisablingSwitchExtension'
     deprecated: ~
     public: true
-
-  prestashop.multistore_checkbox_enabler:
-    class: PrestaShopBundle\Service\Form\MultistoreCheckboxEnabler
-    arguments:
-      - '@prestashop.adapter.feature.multistore'
-      - '@prestashop.adapter.legacy.configuration'
-      - '@prestashop.adapter.shop.context'
-      - '@prestashop.core.admin.multistore'
-      - '@PrestaShopBundle\Form\FormCloner'
