--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_factory.yml
@@ -1,3 +1,4 @@
+# This file will be removed in next version, do not add any service here
 services:
   prestashop.bundle.form.admin.improve.design.theme.page_layout_customization_form_factory:
     alias: 'PrestaShopBundle\Form\Admin\Improve\Design\Theme\PageLayoutCustomizationFormFactory'
