--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_validator.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_validator.yml
@@ -1,3 +1,4 @@
+# This file will be removed in next version, do not add any service here
 services:
   validator.unique.tinymce_max_length_validator:
     alias: PrestaShopBundle\Form\Validator\Constraints\TinyMceMaxLengthValidator
