--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,3 +1,6 @@
+includes:
+	- phpstan-baseline.neon
+	- phpstan-disallowed-calls.neon
 parameters:
   level: 5
   bootstrapFiles:
@@ -73,32 +76,3 @@ parameters:
     - PaymentModuleCore::DEBUG_MODE
     - _PS_API_IN_USE_
     - _PS_ALLOW_MULTI_STATEMENTS_QUERIES_
-  disallowedNamespaces:
-        -
-            class: 'Symfony\Component\Translation\TranslatorInterface'
-            message: 'use Symfony\Contracts\Translation\TranslatorInterface instead'
-            disallowIn:
-                - src/*
-  disallowedMethodCalls:
-        -
-            method: 'PrestaShopBundle\Form\Admin\Type\CommonAbstractType::getConfiguration()'
-            message: 'Use dependency injection instead'
-            disallowIn:
-                - src/*
-
-  disallowedConstants:
-        -
-            class: PrestaShopBundle\Security\Voter\PageVoter
-            constant: ['CREATE', 'READ', 'UPDATE', 'DELETE', 'LEVEL_DELETE', 'LEVEL_CREATE', 'LEVEL_READ', 'LEVEL_UPDATE']
-            message: 'Use \PrestaShop\PrestaShop\Core\Security\Permission constants instead.'
-            disallowIn:
-                - src/*
-        -
-            class: AdminController
-            constant: ['LEVEL_DELETE', 'LEVEL_ADD', 'LEVEL_VIEW', 'LEVEL_EDIT']
-            message: 'Use \PrestaShop\PrestaShop\Core\Security\Permission constants instead.'
-            disallowIn:
-                - src/*
-                - classes/*
-                - controllers/*
-
