--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_data_factory.yml
@@ -558,3 +558,16 @@ services:
       - '@prestashop.core.hook.dispatcher'
       - '@prestashop.core.grid.query.doctrine_query_parser'
       - 'customer_groups'
+
+  prestashop.core.grid.data.factory.tax_rule:
+    class: '%prestashop.core.grid.data.factory.doctrine_grid_data_factory%'
+    arguments:
+      - '@PrestaShop\PrestaShop\Core\Grid\Query\TaxRuleQueryBuilder'
+      - '@prestashop.core.hook.dispatcher'
+      - '@prestashop.core.grid.query.doctrine_query_parser'
+      - 'tax_rule'
+
+  PrestaShop\PrestaShop\Core\Grid\Data\Factory\TaxRuleGridDataFactory:
+    arguments:
+      - '@prestashop.core.grid.data.factory.tax_rule'
+      - '@translator'
