--- a/src/PrestaShopBundle/Resources/config/services/core/grid/grid_factory.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/grid_factory.yml
@@ -296,6 +296,14 @@ services:
       - '@prestashop.core.grid.filter.merchandise_return_form_factory'
       - '@prestashop.core.hook.dispatcher'
 
+  prestashop.core.grid.factory.tax_rule:
+    class: 'PrestaShop\PrestaShop\Core\Grid\GridFactory'
+    arguments:
+      - '@PrestaShop\PrestaShop\Core\Grid\Definition\Factory\TaxRuleGridDefinitionFactory'
+      - '@PrestaShop\PrestaShop\Core\Grid\Data\Factory\TaxRuleGridDataFactory'
+      - '@prestashop.core.grid.filter.form_factory'
+      - '@prestashop.core.hook.dispatcher'
+
   prestashop.core.grid.factory.tax_rules_group:
     class: 'PrestaShop\PrestaShop\Core\Grid\GridFactory'
     arguments:
