--- a/src/PrestaShopBundle/Resources/config/services/core/domain/customer_message.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/domain/customer_message.yml
@@ -1,5 +1,6 @@
 services:
   _defaults:
+    autowire: true
     public: true
 
   PrestaShop\PrestaShop\Core\Domain\CustomerMessage\Repository\CustomerMessageRepository:
