Update PHPStan performance

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -64,6 +64,7 @@ jobs:
         with:
           php-version: '8.0'
           extensions: mbstring, intl, gd, xml, dom, json, fileinfo, curl, zip, iconv, simplexml
+          coverage: none
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
