--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -62,9 +62,9 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.0'
+          php-version: '8.0' # will be overriden by platform.php in composer.json see https://phpstan.org/config-reference#phpversion
           extensions: mbstring, intl, gd, xml, dom, json, fileinfo, curl, zip, iconv, simplexml
-          coverage: none
+          coverage: none # disable coverage to disable xdebug in the action.
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
