--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -12,7 +12,7 @@ services:
 
   PrestaShopBundle\Form\Admin\Type\DatePickerType:
     arguments:
-      - '@prestashop.bundle.form.data_transformer.arabic_to_latin_digit'
+      - '@PrestaShopBundle\Form\DataTransformer\ArabicToLatinDigitDataTransformer'
 
   PrestaShopBundle\Form\Admin\Type\NavigationTabType:
     arguments:
@@ -21,7 +21,7 @@ services:
 
   PrestaShopBundle\Form\Admin\Type\EmailType:
     arguments:
-      - '@prestashop.bundle.form.data_transformer.idn_converter'
+      - '@PrestaShopBundle\Form\DataTransformer\IDNConverterDataTransformer'
 
   PrestaShopBundle\Form\Admin\Type\DateRangeType:
   PrestaShopBundle\Form\Admin\Category\SimpleCategory:
@@ -348,7 +348,7 @@ services:
   PrestaShopBundle\Form\Admin\Type\ShopChoiceTreeType:
     arguments:
       - "@=service('prestashop.adapter.form.choice_provider.shop_tree_choice_provider').getChoices()"
-      - '@prestashop.bundle.form.data_transformer.string_array_to_integer_array'
+      - '@PrestaShopBundle\Form\DataTransformer\StringArrayToIntegerArrayDataTransformer'
 
   PrestaShopBundle\Form\Admin\Type\ShopSelectorType:
     arguments:
@@ -405,7 +405,7 @@ services:
 
   PrestaShopBundle\Form\Admin\Configure\ShopParameters\Contact\ContactType:
     arguments:
-      $singleDefaultLanguageArrayToFilledArrayDataTransformer: '@prestashop.bundle.form.data_transformer.default_language_to_filled_array'
+      $singleDefaultLanguageArrayToFilledArrayDataTransformer: '@PrestaShopBundle\Form\DataTransformer\DefaultLanguageToFilledArrayDataTransformer'
       $isShopFeatureEnabled: '@=service("prestashop.adapter.multistore_feature").isUsed()'
 
   PrestaShopBundle\Form\Admin\Improve\Design\Pages\CmsPageCategoryType:
