--- a/src/PrestaShopBundle/Resources/config/services/core/form/form_data_provider.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/form_data_provider.yml
@@ -51,7 +51,7 @@ services:
     class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataProvider\ContactFormDataProvider'
     arguments:
       - '@prestashop.core.query_bus'
-      - '@prestashop.bundle.form.data_transformer.string_array_to_integer_array'
+      - '@PrestaShopBundle\Form\DataTransformer\StringArrayToIntegerArrayDataTransformer'
       - '@=service("prestashop.adapter.shop.context").getContextListShopID()'
 
   prestashop.core.form.identifiable_object.data_provider.cms_page_category_form_data_provider:
